<resources>
    <string name="app_name">APPCUÉRDATE</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="acceder">ACCEDER</string>
    <string name="registrate">REGÍSTRATE</string>
    <string name="log_out">CERRAR SESIÓN</string>
    <string name="repasar">Repasar</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="crear">Crear Test</string>
    <string name="a_adir_test">AÑADIR TEST</string>
    <string name="guardar">Guardar</string>
    <string name="crear_test">CREAR TEST</string>
    <string name="a_adir">AÑADIR</string>
    <string name="copiar_test">COPIAR TEST</string>
    <string name="pegar_test">PEGAR TEST</string>
    <string name="a_adir_tema">AÑADIR TEMA</string>
    <string name="subtema_test1">Subtema Test1</string>
    <string name="titulo_materia">Titulo Materia</string>
</resources>